--- a/.babelrc
+++ b/.babelrc
@@ -1,17 +1,16 @@
 {
     "plugins": [
-        "transform-class-properties",
+        "@babel/plugin-proposal-class-properties",
         [
-            "transform-runtime",
+            "@babel/plugin-transform-runtime",
             {
-                "polyfill": false,
+                "corejs": false,
                 "regenerator": true
             }
         ]
     ],
     "presets": [
-        "env",
-        "react",
-        "stage-0"
+        "@babel/preset-env",
+        "@babel/preset-react"
     ]
 }
