--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
-  "name": "transferwise",
+  "name": "contacts",
   "version": "1.0.0",
-  "description": "Transferwise test by Toniton",
+  "description": "Contact listing app.",
   "private": true,
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "cors": "^2.8.4",
-    "express": "^4.16.3",
-    "lodash": "^4.17.10"
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-transform-runtime": "^7.25.4",
+    "@babel/preset-env": "^7.25.4",
+    "@babel/preset-react": "^7.24.7",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.5",
-    "babel-jest": "^23.4.0",
-    "babel-loader": "^7.1.4",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^29.7.0",
+    "babel-loader": "^9.1.3",
     "babel-plugin-syntax-decorators": "^6.13.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
@@ -22,47 +26,47 @@
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
+    "babel-preset-env": "^0.0.0",
     "babel-preset-es2015": "^6.24.1",
-    "babel-preset-jest": "^23.2.0",
+    "babel-preset-jest": "^29.6.3",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "bootstrap": "^4.1.1",
-    "clean-webpack-plugin": "^0.1.19",
-    "css-loader": "^0.28.11",
-    "eslint": "^5.1.0",
-    "eslint-loader": "^2.0.0",
-    "eslint-plugin-react": "^7.10.0",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "fetch-mock": "^6.5.0",
-    "file-loader": "^1.1.11",
-    "html-webpack-plugin": "^3.2.0",
-    "jasmine-core": "^3.1.0",
-    "jquery": "^3.3.1",
-    "jshint": "^2.9.5",
-    "jslint": "^0.12.0",
-    "json-server": "^0.14.0",
-    "karma": "^2.0.3",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-jasmine": "^1.1.2",
-    "karma-webpack": "^3.0.0",
-    "node-sass": "^4.9.0",
-    "popper.js": "^1.14.3",
-    "prop-types": "^15.6.2",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-redux": "^5.0.7",
-    "react-router-dom": "^4.3.1",
-    "redux": "^4.0.0",
-    "redux-mock-store": "^1.5.3",
-    "redux-thunk": "^2.3.0",
-    "sass-loader": "^7.0.3",
-    "seamless-immutable": "^7.1.3",
-    "style-loader": "^0.21.0",
-    "webpack": "^4.12.0",
-    "webpack-cli": "^3.0.8",
-    "webpack-dev-middleware": "^3.1.3",
-    "webpack-dev-server": "^3.1.4"
+    "bootstrap": "^5.3.3",
+    "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^7.1.2",
+    "eslint": "^9.9.1",
+    "eslint-plugin-react": "^7.35.0",
+    "eslint-webpack-plugin": "^4.2.0",
+    "fetch-mock": "^11.1.3",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.6.0",
+    "jasmine-core": "^5.2.0",
+    "jquery": "^3.7.1",
+    "jshint": "^2.13.6",
+    "jslint": "^0.12.1",
+    "json-server": "^0.17.4",
+    "karma": "^6.4.4",
+    "karma-chrome-launcher": "^3.2.0",
+    "karma-jasmine": "^5.1.0",
+    "karma-webpack": "^5.0.1",
+    "mini-css-extract-plugin": "^2.9.1",
+    "popper.js": "^1.16.1",
+    "prop-types": "^15.8.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.1",
+    "redux": "^5.0.1",
+    "redux-mock-store": "^1.5.4",
+    "redux-thunk": "^3.1.0",
+    "sass": "^1.77.8",
+    "sass-loader": "^16.0.1",
+    "seamless-immutable": "^7.1.4",
+    "style-loader": "^4.0.0",
+    "webpack": "^5.94.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-middleware": "^7.4.2",
+    "webpack-dev-server": "^5.0.4"
   },
   "scripts": {
     "test": "karma start ./karma.conf.js  --auto-watch",
